# pyrite

./: .gitignore  Cargo.toml  README.md  flake.nix  rustfmt.toml
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
crates/: Cargo.toml
crates/pyrite_app/: Cargo.toml
crates/pyrite_app/macros/src/: lib.rs
crates/pyrite_app/src/: app.rs  executor.rs  lib.rs  resource.rs  schedule.rs  scheduler.rs  stage.rs  system.rs
crates/pyrite_asset/: Cargo.toml
crates/pyrite_asset/src/: asset.rs  lib.rs
crates/pyrite_asset/src/loaders/: gltf.rs  image.rs  mod.rs  spirv.rs  txt.rs
crates/pyrite_desktop/: Cargo.toml
crates/pyrite_desktop/src/: desktop.rs  input.rs  key.rs  lib.rs  time.rs  window.rs
crates/pyrite_frame_graph/: Cargo.toml
crates/pyrite_frame_graph/src/: frame_graph.rs  lib.rs
crates/pyrite_imgui/: Cargo.toml
crates/pyrite_input/: Cargo.toml
crates/pyrite_input/src/: input.rs  keyboard.rs  lib.rs  mouse.rs
crates/pyrite_render/: Cargo.toml.old
crates/pyrite_render/src/: lib.rs  render_manager.rs
crates/pyrite_time/: Cargo.toml
crates/pyrite_time/src/: lib.rs  time.rs
crates/pyrite_util/: Cargo.toml
crates/pyrite_util/macros/: Cargo.toml
crates/pyrite_util/macros/src/: lib.rs
crates/pyrite_util/src/: lib.rs
crates/pyrite_vulkan/: Cargo.toml
crates/pyrite_vulkan/src/: allocator.rs  executor.rs  lib.rs  objects.rs  stager.rs  swapchain.rs  util.rs  vulkan.rs
crates/pyrite_vulkan/src/objects/: allocator.rs  buffer.rs  command.rs  common.rs  compute.rs  compute_pipeline.rs  descriptor_set.rs  glsl.rs  graphics_pipeline.rs  image.rs  mod.rs  pipeline_layout.rs  sampler.rs  shader.rs  stager.rs  sync.rs
crates/pyrite_vulkan/src_old/: allocator.rs  lib.rs  swapchain.rs  vulkan.rs
crates/pyrite_vulkan/src_old/objects/: buffer.rs  command.rs  compute_pipeline.rs  descriptor_set.rs  graphics_pipeline.rs  image.rs  sampler.rs  shader.rs  sync.rs
crates/pyrite_window/: Cargo.toml
crates/pyrite_window/src/: lib.rs  util.rs  window.rs
examples/app/: Cargo.toml
examples/app/src/: main.rs
examples/asset/: Cargo.toml
examples/asset/assets/: test.txt
examples/asset/src/: main.rs
examples/desktop/: Cargo.toml
examples/desktop/src/: main.rs
examples/render_manager/: Cargo.toml
examples/render_manager/src/: main.rs
examples/vulkan/: Cargo.toml
examples/vulkan/src/: main.rs
pyrite/: Cargo.toml
pyrite/src/: lib.rs
