[workspace]
resolver = "2"
members = [
  "crates/pyrite_app",
  "crates/pyrite_app/macros",
  "crates/pyrite_asset",
  "crates/pyrite_desktop",
  "crates/pyrite_input",
  "crates/pyrite_util",
  "crates/pyrite_util/macros",
  "crates/pyrite_vulkan",
  "examples/app",
  "examples/asset",
  "examples/desktop",
  "examples/vulkan",
  "pyrite",
]

