[workspace]
resolver = "2"
members = [
  "crates/pyrite_app",
  "crates/pyrite_app/macros",
  "crates/pyrite_asset",
  "crates/pyrite_imgui",
  "crates/pyrite_input",
  "crates/pyrite_time",
  "crates/pyrite_util",
  "crates/pyrite_util/macros",
  "crates/pyrite_vulkan",
  "crates/pyrite_window",
  "examples/app",
  "examples/asset",
  "examples/desktop",
  "examples/render_manager",
  "examples/vulkan",
  "pyrite",
]

