[package]
name = "pyrite"
version = "0.1.0"
edition = "2021"

[dependencies]
pyrite_app = { path = "../crates/pyrite_app" }
pyrite_asset ={ path = "../crates/pyrite_asset" }
pyrite_desktop = { path = "../crates/pyrite_desktop" }
pyrite_input = { path = "../crates/pyrite_input" }
pyrite_vulkan = { path = "../crates/pyrite_vulkan" }
