[package]
name = "pyrite"
version = "0.1.0"
edition = "2021"

[dependencies]
pyrite_app = { path = "../crates/pyrite_app" }
pyrite_asset ={ path = "../crates/pyrite_asset" }
pyrite_input = { path = "../crates/pyrite_input" }
pyrite_time = { path = "../crates/pyrite_time" }
pyrite_util = { path = "../crates/pyrite_util" }
pyrite_vulkan = { path = "../crates/pyrite_vulkan" }
pyrite_window = { path = "../crates/pyrite_window" }
