[package]
name = "pyrite_desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
pyrite_app = { path = "../pyrite_app" }
pyrite_asset = { path = "../pyrite_asset" }
pyrite_input = { path = "../pyrite_input" }
pyrite_vulkan = { path = "../pyrite_vulkan" }
winit = "0.29.0-beta.0"
raw-window-handle = "0.5.2"
lazy_static = "1.4.0"
