[package]
name = "pyrite_vulkan"
version = "0.1.0"
edition = "2021"

[dependencies]
pyrite_app = { path = "../pyrite_app" }
pyrite_util = { path = "../pyrite_util" }
ash = "0.37.3+1.3.251"
ash-window = "0.12.0"
raw-window-handle = "0.5.2"
anyhow = "1.0.71"
uuid = { version = "1.5.0", features = ["v4", "fast-rng"] }
