[package]
name = "pyrite_vulkan"
version = "0.1.0"
edition = "2021"

[dependencies]
pyrite_app = { path = "../pyrite_app" }
pyrite_util = { path = "../pyrite_util" }
ash = { git = "https://github.com/ash-rs/ash", branch = "rwh-0.6" }
ash-window = { git = "https://github.com/ash-rs/ash", branch = "rwh-0.6" }
raw-window-handle = "0.6.0"
anyhow = "1.0.71"
uuid = { version = "1.5.0", features = ["v4", "fast-rng"] }
slotmap = "1.0.7"
